added highest, lowest and average, changed price to mode

--- a/BudPrices/Views/ProductList/Index.cshtml
+++ b/BudPrices/Views/ProductList/Index.cshtml
@@ -8,9 +8,9 @@
 		<h6>Search by Strain</h6>
 		<input id="strainQuery" type="text" name="strainQuery" placeholder="strain" /><br />
 		<input id="btnPriceSearch" type="submit" onclick="submitStrainForPriceSearch(strainQuery); return false;" value="find prices" /><br />
-		<input id="radioConcentrate" type="radio" name="budType" value="concentrate" />concentrate<br />
-		<input id="radioEdible" type="radio" name="budType" value="edible" />edible<br />
-		<input id="radioFlower" type="radio" name="budType" value="flower" />flower<br />
+		<input id="radioConcentrate" type="radio" name="budType" value="concentrates" />concentrate<br />
+		<input id="radioEdible" type="radio" name="budType" value="edibles" />edible<br />
+		<input id="radioFlower" type="radio" name="budType" value="flowers" />flower<br />
 		<input id="radioOther" type="radio" name="budType" value="other" />other<br />
 	</div>
 	<div>
