Products list, add legend, remove beziering of chart line

--- a/BudPrices/Styles/product-list.css
+++ b/BudPrices/Styles/product-list.css
@@ -45,3 +45,9 @@
 .bud-type input[type="radio"] {
 	position: absolute;
 }
+.chart-legend li span{
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+	margin-right: 5px;
+}
