--- a/BudPrices/Styles/product-list.css
+++ b/BudPrices/Styles/product-list.css
@@ -1,7 +1,7 @@
 ﻿.tab {
 	display: inline-block;
 	padding: 10px;
-	height: 500px;
+	height: 1000px;
 }
 .tab a.tab-label {
 	color: #333;
@@ -45,9 +45,22 @@
 .bud-type input[type="radio"] {
 	position: absolute;
 }
+.chart-legend {
+	float: left;
+}
+.chart-legend ul {
+	list-style-type: none;
+}
 .chart-legend li span{
 	display: inline-block;
 	width: 12px;
 	height: 12px;
 	margin-right: 5px;
+}
+canvas{
+	width: 100% !important;
+	height: auto !important;
+}
+.latest-data {
+	float: right;
 }
